--- a/Personnel_Accounting/Views/_ViewImports.cshtml
+++ b/Personnel_Accounting/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using Personnel_Accounting
-@using Personnel_Accounting.Models
+@using DataAccessLayer.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
