Added displaying Department name and Sepervisor id

--- a/Personnel_Accounting/Views/Home/Index.cshtml
+++ b/Personnel_Accounting/Views/Home/Index.cshtml
@@ -13,6 +13,7 @@
         <table id="tblData" class="table table-bordered table-striped" style="width:100%">
             <thead>
                 <tr>
+                    <th>Id</th>
                     <th>Last Name</th>
                     <th>First Name</th>
                     <th>Middle Name</th>
@@ -20,6 +21,8 @@
                     <th>Education</th>
                     <th>Position</th>
                     <th>Salaty</th>
+                    <th>Department</th>
+                    <th>Supervisor</th>
                     <th></th>
                 </tr>
             </thead>
@@ -27,6 +30,7 @@
                 @foreach (var employee in Model)
                 {
                     <tr>
+                        <td>@employee.Id</td>
                         <td>@employee.LastName</td>
                         <td>@employee.FirstName</td>
                         <td>@employee.MiddleName</td>
@@ -34,6 +38,8 @@
                         <td>@employee.Education</td>
                         <td>@employee.Position</td>
                         <td>@employee.Salaty</td>
+                        <td>@employee.Department.Name</td>
+                        <td>@employee.Supervisor.Id</td>
                         <td></td>
                     </tr>
                 }
@@ -41,7 +47,3 @@
         </table>
     </div>
 </div>
-@*
-@section Scripts{
-    <script src="~/js/employee.js"></script>
-}*@
