--- a/Personnel_Accounting/Views/Home/Index.cshtml
+++ b/Personnel_Accounting/Views/Home/Index.cshtml
@@ -1,15 +1,24 @@
 ﻿@model List<Employee>
 
 <h1>Employee List</h1>
-﻿<div class="card shadow border-0 style="margin-bottom: 60px">
+﻿<div class="card shadow border-0" style="margin-bottom: 60px">
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
         <div class="rox">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2">User List</h2>
+                <h2 class="text-white py-2">Employee List</h2>
             </div>
         </div>
     </div>
     <div class="card-body p-4 ">
+        <div class="row pb-3">
+            <div class="col-6">
+            </div>
+            <div class="col-6 text-end">
+                <a asp-controller="Home" asp-action="Upsert" class="btn btn-primary">
+                    <i class="bi bi-plus-circle"></i> Add New Employee
+                </a>
+            </div>
+        </div>
         <table id="tblData" class="table table-bordered table-striped" style="width:100%">
             <thead>
                 <tr>
@@ -38,8 +47,8 @@
                         <td>@employee.Education</td>
                         <td>@employee.Position</td>
                         <td>@employee.Salaty</td>
-                        <td>@employee.Department.Name</td>
-                        <td>@employee.Supervisor.Id</td>
+                        <td>@employee.Department?.Name</td>
+                        <td>@employee.Supervisor?.Id</td>
                         <td></td>
                     </tr>
                 }
