--- a/Personnel_Accounting/Views/_ViewImports.cshtml
+++ b/Personnel_Accounting/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Personnel_Accounting
-@using DataAccessLayer.Entities
+@using Models;
+@using Models.ViewModel;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
