--- a/Personnel_Accounting/Views/Home/Index.cshtml
+++ b/Personnel_Accounting/Views/Home/Index.cshtml
@@ -54,6 +54,9 @@
                                 <a asp-controller="Home" asp-action="Upsert" asp-route-id="@employee.Id" class="btn btn-primary mx-2">
                                     <i class="bi bi-pencil-square"></i> Edit
                                 </a>
+                                <a asp-controller="Home" asp-action="Delete" asp-route-id="@employee.Id" class="btn btn-danger mx-2">
+                                    <i class="bi bi-trash3"></i> Delete
+                                </a>
                             </div>
                         </td>
                     </tr>
