--- a/Personnel_Accounting/Views/Home/Index.cshtml
+++ b/Personnel_Accounting/Views/Home/Index.cshtml
@@ -31,16 +31,15 @@
                 </div>
                 <div class="form-group mx-2 flex-grow-1">
                     <label for="salary">Salary:</label>
-                    <input type="text" class="form-control" name="salary" id="salary">
+                    <input type="text" class="form-control" name="salary" id="salary" pattern="\d+.\d+" title="Please enter a valid number">
                 </div>
-                <div class="ml-auto" style="padding-top: 20px;">
+                <div class="mt-auto">
                     <button type="submit" class="btn btn-primary">
                         <i class="bi bi-search"></i> Search
                     </button>
                 </div>
             </form>
         </div>
-
 
         <table id="tblData" class="table table-bordered table-striped" style="width:100%">
             <thead>
