Renamed field in Employee from Salaty to Salary

--- a/Personnel_Accounting/Views/Home/Delete.cshtml
+++ b/Personnel_Accounting/Views/Home/Delete.cshtml
@@ -40,8 +40,8 @@
                     <label asp-for="Position" class="ms-2 text-muted"></label>
                 </div>
                 <div class="form-floating py-2 col-12">
-                    <input asp-for="Salaty" disabled class="form-control border-0 shadow" />
-                    <label asp-for="Salaty" class="ms-2 text-muted"></label>
+                    <input asp-for="Salary" disabled class="form-control border-0 shadow" />
+                    <label asp-for="Salary" class="ms-2 text-muted"></label>
                 </div>
                 <div class="form-floating py-2 col-12">
                     <input asp-for="DepartmentId" disabled class="form-control border-0 shadow" />
