--- a/Personnel_Accounting/Views/Home/Index.cshtml
+++ b/Personnel_Accounting/Views/Home/Index.cshtml
@@ -68,7 +68,7 @@
                         <td>@employee.BirthYear</td>
                         <td>@employee.Education</td>
                         <td>@employee.Position</td>
-                        <td>@employee.Salaty</td>
+                        <td>@employee.Salary</td>
                         <td>@employee.Department?.Name</td>
                         <td>@employee.Supervisor?.Id</td>
                         <td>
