--- a/Personnel_Accounting/Views/Home/Upsert.cshtml
+++ b/Personnel_Accounting/Views/Home/Upsert.cshtml
@@ -43,9 +43,9 @@
                             <span asp-validation-for="Employee.Position" class="text-danger"></span>
                         </div>
                         <div class="form-floating py-3 col-12">
-                            <input asp-for="Employee.Salaty" class="form-control border-0 shadow" />
-                            <label asp-for="Employee.Salaty" class="ms-2 text-muted"></label>
-                            <span asp-validation-for="Employee.Salaty" class="text-danger"></span>
+                            <input asp-for="Employee.Salary" class="form-control border-0 shadow" />
+                            <label asp-for="Employee.Salary" class="ms-2 text-muted"></label>
+                            <span asp-validation-for="Employee.Salary" class="text-danger"></span>
                         </div>
                         <div class="form-floating py-3 col-12">
                             <select asp-for="Employee.DepartmentId" asp-items="@Model.DepartmentList" class="form-select border-0 shadow">
