--- a/Personnel_Accounting/Views/Home/Index.cshtml
+++ b/Personnel_Accounting/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
         <div class="rox">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2">Employee List</h2>
+                <h2 class="text-white py-2">Список працівників</h2>
             </div>
         </div>
     </div>
@@ -15,27 +15,27 @@
             </div>
             <div class="col-6 text-end">
                 <a asp-controller="Home" asp-action="Upsert" class="btn btn-primary">
-                    <i class="bi bi-plus-circle"></i> Add New Employee
+                    <i class="bi bi-plus-circle"></i> Додати нового працівника
                 </a>
             </div>
         </div>
         <div class="row pb-3">
             <form asp-controller="Home" asp-action="Index" method="get" class="d-flex align-items-center">
                 <div class="form-group mx-2 flex-grow-1">
-                    <label for="birthYear">Birth Year:</label>
-                    <input type="number" class="form-control" name="birthYear" id="birthYear">
+                    <label for="birthYear">Рік народження:</label>
+                    <input type="number" class="form-control" name="birthYear" id="birthYear" min="0">
                 </div>
                 <div class="form-group mx-2 flex-grow-1">
-                    <label for="education">Education:</label>
+                    <label for="education">Освіта:</label>
                     <input type="text" class="form-control" name="education" id="education">
                 </div>
                 <div class="form-group mx-2 flex-grow-1">
-                    <label for="salary">Salary:</label>
-                    <input type="text" class="form-control" name="salary" id="salary" pattern="\d+.\d+" title="Please enter a valid number">
+                    <label for="salary">Оклад:</label>
+                    <input type="text" class="form-control" name="salary" id="salary" pattern="\d+(.\d+)?" title="Ввдіть коректне число">
                 </div>
                 <div class="mt-auto">
                     <button type="submit" class="btn btn-primary">
-                        <i class="bi bi-search"></i> Search
+                        <i class="bi bi-search"></i> Шукати
                     </button>
                 </div>
             </form>
@@ -44,16 +44,16 @@
         <table id="tblData" class="table table-bordered table-striped" style="width:100%">
             <thead>
                 <tr>
-                    <th>Id</th>
-                    <th>Last Name</th>
-                    <th>First Name</th>
-                    <th>Middle Name</th>
-                    <th>Birth Year</th>
-                    <th>Education</th>
-                    <th>Position</th>
-                    <th>Salaty</th>
-                    <th>Department</th>
-                    <th>Supervisor</th>
+                    <th>Табельний Номер</th>
+                    <th>Прізвищe</th>
+                    <th>Ім'я</th>
+                    <th>По-батькові</th>
+                    <th>Рік Народження</th>
+                    <th>Освіта</th>
+                    <th>Посада</th>
+                    <th>Оклад</th>
+                    <th>Департамент</th>
+                    <th>Підпорякований</th>
                     <th></th>
                 </tr>
             </thead>
@@ -74,10 +74,10 @@
                         <td>
                             <div class="w-75 btn-group" role="group">
                                 <a asp-controller="Home" asp-action="Upsert" asp-route-id="@employee.Id" class="btn btn-primary mx-2">
-                                    <i class="bi bi-pencil-square"></i> Edit
+                                    <i class="bi bi-pencil-square"></i> Редагувати
                                 </a>
                                 <a asp-controller="Home" asp-action="Delete" asp-route-id="@employee.Id" class="btn btn-danger mx-2">
-                                    <i class="bi bi-trash3"></i> Delete
+                                    <i class="bi bi-trash3"></i> Видалити
                                 </a>
                             </div>
                         </td>
