--- a/Personnel_Accounting/Views/Home/Delete.cshtml
+++ b/Personnel_Accounting/Views/Home/Delete.cshtml
@@ -4,7 +4,7 @@
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
         <div class="rox">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2">Delete Category</h2>
+                <h2 class="text-white py-2">Видалення Працівника</h2>
             </div>
         </div>
     </div>
@@ -49,15 +49,15 @@
                 </div>
                 <div class="form-floating py-2 col-12">
                     <input asp-for="SupervisorId" disabled class="form-control border-0 shadow" />
-                    <label asp-for="SupervisorId" class="ms-2 text-white"></label>
+                    <label asp-for="SupervisorId" class="ms-2 text-muted"></label>
                 </div>
                 <div class="row pt-2">
                     <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-danger form-control">Delete</button>
+                        <button type="submit" class="btn btn-danger form-control">Видалити</button>
                     </div>
                     <div class="col-6 col-md-3">
                         <a asp-controller="Home" asp-action="Index" class="btn btn-outline-light form-control border-dark text-muted">
-                            Back to List
+                            Назад
                         </a>
                     </div>
                 </div>
